@@ -1,3 +1,10 @@
+2007-10-18  Mark Rowe  <mrowe@apple.com>
+
+        Fix the no-SVG build.
+
+        * css/CSSPrimitiveValueMappings.h: Move the CSSPrimitiveValue implementations for
+        LineCap, LineJoin and WindRule inside #if ENABLE(SVG).
+
 2007-10-18  Darin Adler  <darin@apple.com>
 
         Reviewed by Anders.
